[gd_scene load_steps=6 format=3 uid="uid://6mrawjjm5bds"]

[ext_resource type="Resource" path="res://src/entities/player/player_state_resource.tres" id="1"]
[ext_resource type="Script" path="res://src/autoload/audio_player/bgm/bgm_player.gd" id="2"]
[ext_resource type="Script" path="res://src/autoload/audio_player/sfx/sfx_player.gd" id="4_p84st"]
[ext_resource type="Script" path="res://src/autoload/audio_player/sfx/sfx_player_non_diegetic.gd" id="5_7273u"]
[ext_resource type="Script" path="res://src/autoload/audio_player/settings/audio_settings_controller.gd" id="6_j2jn5"]

[node name="AudioPlayer" type="Node"]
process_mode = 3

[node name="Bgm" type="Node" parent="."]

[node name="BgmPlayer" type="Node" parent="Bgm"]
script = ExtResource( "2" )
_player_state_resource = ExtResource( "1" )

[node name="BasePlayer" type="AudioStreamPlayer" parent="Bgm/BgmPlayer"]
bus = &"BgmBase"

[node name="GlidePlayer" type="AudioStreamPlayer" parent="Bgm/BgmPlayer"]
bus = &"BgmGlide"

[node name="RhythmPlayer" type="AudioStreamPlayer" parent="Bgm/BgmPlayer"]
bus = &"BgmRhythm"

[node name="Sfx" type="Node" parent="."]

[node name="SfxPlayer" type="Node" parent="Sfx"]
script = ExtResource( "4_p84st" )

[node name="SfxPlayerNonDiegetic" type="Node" parent="Sfx"]
script = ExtResource( "5_7273u" )

[node name="SettingsController" type="Node" parent="."]
script = ExtResource( "6_j2jn5" )
